--- a/analog-clock.html
+++ b/analog-clock.html
@@ -6,15 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="analog-clock.css" />
-
   </head>
   <body>
     <div id="clock">
-      <!--Clock No(1,2,....,12)-->
-
+      <!--Create the Numbers of a clock as an unordered list-->
+      <ul class="hours">
+        <li>
+          <span> 1 </span>
+        </li>
+        <li>
+          <span> 2 </span>
+        </li>
+        <li>
+          <span> 3 </span>
+        </li>
+        <li>
+          <span> 4 </span>
+        </li>
+        <li>
+          <span> 5 </span>
+        </li>
+        <li>
+          <span> 6 </span>
+        </li>
+        <li>
+          <span> 7 </span>
+        </li>
+        <li>
+          <span> 8 </span>
+        </li>
+        <li>
+          <span> 9 </span>
+        </li>
+        <li>
+          <span> 10 </span>
+        </li>
+        <li>
+          <span> 11 </span>
+        </li>
+        <li>
+          <span> 12 </span>
+        </li>
+      </ul>
       <!--clock hands()-->
     </div>
-    
+
     <script src="analog-clock.js"></script>
   </body>
 </html>
