resize minute hand using css

--- a/analog-clock.html
+++ b/analog-clock.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="clock">
-      <!--Create the Numbers of a clock as an unordered list-->
+      <!--Create the Numbers of a clock as an unordered list -->
       <ul class="hours">
         <li>
           <span> 1 </span>
@@ -48,9 +48,19 @@
           <span> 12 </span>
         </li>
       </ul>
-      <!--clock hands()-->
+      
+      <!--create hands of the clock -->
+      <div class='hr-wrapper'>
+        <div class='hand hr'></div>
+      </div>
+      <div class='min-wrapper'>
+        <div class='hand min'></div>
+      </div>
+      <div class='sec-wrapper'>
+        <div class='hand sec'></div>
+      </div>
     </div>
-
+    
     <script src="analog-clock.js"></script>
   </body>
 </html>
